--- a/src/main/resources/Views/peliculasStage.fxml
+++ b/src/main/resources/Views/peliculasStage.fxml
@@ -3,12 +3,12 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import de.jensd.fx.glyphs.octicons.OctIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
@@ -17,32 +17,38 @@
    <children>
       <TableView fx:id="carteleraView" layoutX="51.0" layoutY="430.0" prefHeight="225.0" prefWidth="583.0">
         <columns>
-            <TableColumn fx:id="cartelera_ID" prefWidth="47.0" text="N°" />
-            <TableColumn fx:id="cartelera_TITULO" prefWidth="86.0" text="Titulo" />
-            <TableColumn fx:id="cartelera_DIRECTOR" prefWidth="83.0" text="Director" />
-            <TableColumn fx:id="cartelera_DIRECTOR" prefWidth="89.0" text="Duración" />
-            <TableColumn fx:id="cartelera_FUNCIONES" prefWidth="83.0" text="Funciones" />
-            <TableColumn fx:id="cartelera_CLASIFICACION" prefWidth="87.0" text="Clasificación" />
+            <TableColumn fx:id="cartelera_ID" text="N°" />
+            <TableColumn fx:id="cartelera_TITULO" text="Titulo" />
+            <TableColumn fx:id="cartelera_DIRECTOR" text="Director" />
+            <TableColumn fx:id="cartelera_DURACION" text="Género" />
+            <TableColumn fx:id="cartelera_FUNCIONES" text="Funciones" />
+            <TableColumn fx:id="cartelera_CLASIFICACION" text="Clasificación" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
+         <opaqueInsets>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </opaqueInsets>
       </TableView>
       <Label layoutX="51.0" layoutY="394.0" text="Actualmente en caltelera!" />
       <Label layoutX="51.0" layoutY="35.0" text="Películas totales" />
       <TableView fx:id="moviesView" layoutX="51.0" layoutY="57.0" prefHeight="263.0" prefWidth="583.0">
         <columns>
-          <TableColumn fx:id="pelicula_ID" prefWidth="47.0" text="N°" />
-          <TableColumn fx:id="pelicula_TITULO" prefWidth="86.0" text="Titulo" />
-            <TableColumn fx:id="pelicula_DIRECTOR" prefWidth="83.0" text="Director" />
-            <TableColumn fx:id="pelicula_DURACION" prefWidth="89.0" text="Duración" />
-            <TableColumn fx:id="pelicula_FUNCIONES" prefWidth="83.0" text="Funciones" />
-            <TableColumn fx:id="pelicula_CLASIFICACION" prefWidth="87.0" text="Clasificación" />
-            <TableColumn fx:id="pelicula_CARTELERA" prefWidth="127.0" text="En Cartelera" />
+          <TableColumn fx:id="pelicula_ID" text="N°" />
+          <TableColumn fx:id="pelicula_TITULO" text="Titulo" />
+            <TableColumn fx:id="pelicula_DIRECTOR" text="Director" />
+            <TableColumn fx:id="pelicula_DURACION" text="Género" />
+            <TableColumn fx:id="pelicula_FUNCIONES" text="Funciones" />
+            <TableColumn fx:id="pelicula_CLASIFICACION" text="Clasificación" />
+            <TableColumn fx:id="pelicula_CARTELERA" text="En Cartelera" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
+         <opaqueInsets>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </opaqueInsets>
       </TableView>
       <Separator layoutX="674.0" layoutY="20.0" orientation="VERTICAL" prefHeight="641.0" prefWidth="0.0" />
       <ImageView fitHeight="225.0" fitWidth="201.0" layoutX="741.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
@@ -54,16 +60,15 @@
       <Text layoutX="779.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
       <Text layoutX="779.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
       <Label layoutX="701.0" layoutY="385.0" text="Descripción:" />
-      <Text layoutX="779.0" layoutY="551.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <TextArea layoutX="779.0" layoutY="385.0" prefHeight="92.0" prefWidth="162.0" />
+      <Text layoutX="830.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="135.00000839470886" />
       <Label layoutX="707.0" layoutY="484.0" text="Funciones:" />
       <Text layoutX="779.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text layoutX="779.0" layoutY="527.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text layoutX="779.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text layoutX="779.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text fx:id="txtDirector" layoutX="779.0" layoutY="537.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671326637268" />
       <Label layoutX="709.0" layoutY="565.0" text="En carltelera desde:" />
       <Label layoutX="709.0" layoutY="589.0" text="hasta:" />
-      <Text layoutX="830.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
-      <Text layoutX="830.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
+      <Text layoutX="779.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="134.99999403953552" />
+      <Text layoutX="830.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="134.99999403953552" />
       <Button layoutX="166.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonNew" text="Nuevo">
          <graphic>
             <OctIconView glyphName="DIFF_ADDED" />
@@ -79,5 +84,6 @@
             <MaterialDesignIconView glyphName="DELETE" />
          </graphic>
       </Button>
+      <Text boundsType="LOGICAL_VERTICAL_CENTER" layoutX="778.0" layoutY="373.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="103.00000637769699" />
    </children>
 </AnchorPane>
