--- a/src/main/resources/Styles/styleDEMO.css
+++ b/src/main/resources/Styles/styleDEMO.css
@@ -40,7 +40,7 @@
 }
 
 .navBar .button .Icons{
-    -fx-fill: #eaa43a;
+    -fx-fill: #FF6D00;
     -fx-font-size: 26px
 }
 
@@ -51,7 +51,7 @@
 
 .dashBoard {
     -fx-border-color:  #000000;
-  -fx-background-color: #eaa43a;
+    -fx-background-color: linear-gradient(#FFB600, #FF8500 ,#FF6D00, #FF5400);
 }
 
 .loginPane{
@@ -139,4 +139,50 @@
     -fx-font-height: 40px;
 }
 
+.table-view, .table-view:focused {
+    -fx-background-color: transparent, -fx-box-border, -fx-control-inner-background;
+    -fx-background-insets: -1.4, 0, 1;
+    -fx-background-radius: 1.4, 0, 0;
+}
 
+
+.table-view .column-header .label {
+    -fx-text-fill: #52677A;
+    -fx-alignment: CENTER;
+}
+
+
+.table-view .column-header:hover {
+    -fx-background-color: whitesmoke;
+}
+
+
+.table-view .column-header, .table-view .filler {
+    -fx-background-color: white;
+    -fx-size: 45;
+    -fx-border-color: -fx-box-border;
+    -fx-border-width: 0 1 3 0;
+    -fx-border-insets: 0;
+}
+
+
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+
+.table-view .show-hide-columns-button {
+    -fx-background-color: white;
+    -fx-border-color: -fx-box-border;
+    -fx-border-insets: 0;
+}
+.table-view .column-header .label, .table-view .filler .label,
+.table-view .column-drag-header .label, .tree-table-view .column-header .label,
+.tree-table-view .filler .label, .tree-table-view .column-drag-header .label
+{
+    -fx-alignment: CENTER_LEFT;
+}
+
+.txt-descripcion{
+    -fx-background-color: linear-gradient(#FFB600, #FF8500 ,#FF6D00, #FF5400);
+}
