--- a/src/main/resources/Views/empleadosStage.fxml
+++ b/src/main/resources/Views/empleadosStage.fxml
@@ -9,16 +9,16 @@
       <TableView fx:id="table_Emplados" layoutX="22.0" layoutY="186.0" prefHeight="425.0" prefWidth="796.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="163.0" AnchorPane.topAnchor="185.0">
         <columns>
           <TableColumn fx:id="column_ID" prefWidth="46.0" text="ID" />
-          <TableColumn fx:id="column_COD" prefWidth="57.0" text="Codigo" />
-            <TableColumn fx:id="column_USERNAME" prefWidth="73.0" text="Username" />
-            <TableColumn fx:id="column_FIRSTNAME" prefWidth="86.0" text="Nombres" />
-            <TableColumn fx:id="column_LASTNAME" prefWidth="77.0" text="Apellidos" />
-            <TableColumn fx:id="column_CEDULA" prefWidth="75.0" text="Cédula" />
-            <TableColumn fx:id="column_TELEFONO" prefWidth="75.0" text="Teléfono" />
-            <TableColumn fx:id="column_EMAIL" prefWidth="75.0" text="Email" />
-            <TableColumn fx:id="column_HIREDATE" prefWidth="75.0" text="Contratado" />
-            <TableColumn fx:id="column_CARGO" prefWidth="75.0" text="Cargo" />
-            <TableColumn fx:id="column_TURNO" prefWidth="75.0" text="Turno" />
+          <TableColumn fx:id="column_COD" minWidth="200.0" prefWidth="200.0" text="Codigo" />
+            <TableColumn fx:id="column_USERNAME" minWidth="200.0" prefWidth="200.0" text="Username" />
+            <TableColumn fx:id="column_FIRSTNAME" minWidth="200.0" prefWidth="200.0" text="Nombres" />
+            <TableColumn fx:id="column_LASTNAME" minWidth="200.0" prefWidth="200.0" text="Apellidos" />
+            <TableColumn fx:id="column_CEDULA" minWidth="200.0" prefWidth="200.0" text="Cédula" />
+            <TableColumn fx:id="column_TELEFONO" minWidth="200.0" prefWidth="200.0" text="Teléfono" />
+            <TableColumn fx:id="column_EMAIL" minWidth="200.0" prefWidth="200.0" text="Email" />
+            <TableColumn fx:id="column_HIREDATE" minWidth="200.0" prefWidth="200.0" text="Contratado" />
+            <TableColumn fx:id="column_CARGO" minWidth="200.0" prefWidth="200.0" text="Cargo" />
+            <TableColumn fx:id="column_TURNO" minWidth="200.0" prefWidth="200.0" text="Turno" />
         </columns>
       </TableView>
    </children>
