--- a/src/main/resources/Views/peliculasStage.fxml
+++ b/src/main/resources/Views/peliculasStage.fxml
@@ -1,89 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import de.jensd.fx.glyphs.octicons.OctIconView?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.peliculasStageController">
    <children>
-      <TableView fx:id="carteleraView" layoutX="51.0" layoutY="430.0" prefHeight="225.0" prefWidth="583.0">
-        <columns>
-            <TableColumn fx:id="cartelera_ID" text="N°" />
-            <TableColumn fx:id="cartelera_TITULO" text="Titulo" />
-            <TableColumn fx:id="cartelera_DIRECTOR" text="Director" />
-            <TableColumn fx:id="cartelera_DURACION" text="Género" />
-            <TableColumn fx:id="cartelera_FUNCIONES" text="Funciones" />
-            <TableColumn fx:id="cartelera_CLASIFICACION" text="Clasificación" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-         <opaqueInsets>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </opaqueInsets>
-      </TableView>
-      <Label layoutX="51.0" layoutY="394.0" text="Actualmente en caltelera!" />
-      <Label layoutX="51.0" layoutY="35.0" text="Películas totales" />
-      <TableView fx:id="moviesView" layoutX="51.0" layoutY="57.0" prefHeight="263.0" prefWidth="583.0">
-        <columns>
-          <TableColumn fx:id="pelicula_ID" text="N°" />
-          <TableColumn fx:id="pelicula_TITULO" text="Titulo" />
-            <TableColumn fx:id="pelicula_DIRECTOR" text="Director" />
-            <TableColumn fx:id="pelicula_DURACION" text="Género" />
-            <TableColumn fx:id="pelicula_FUNCIONES" text="Funciones" />
-            <TableColumn fx:id="pelicula_CLASIFICACION" text="Clasificación" />
-            <TableColumn fx:id="pelicula_CARTELERA" text="En Cartelera" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-         <opaqueInsets>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </opaqueInsets>
-      </TableView>
-      <Separator layoutX="674.0" layoutY="20.0" orientation="VERTICAL" prefHeight="641.0" prefWidth="0.0" />
-      <ImageView fitHeight="225.0" fitWidth="201.0" layoutX="741.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="701.0" layoutY="277.0" text="Titulo: " />
-      <Label layoutX="698.0" layoutY="306.0" text="Duración:" />
-      <Label layoutX="698.0" layoutY="332.0" text="Género:" />
-      <Label layoutX="700.0" layoutY="360.0" text="Director:" />
-      <Text layoutX="779.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text layoutX="779.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text layoutX="779.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Label layoutX="701.0" layoutY="385.0" text="Descripción:" />
-      <Text layoutX="830.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="135.00000839470886" />
-      <Label layoutX="707.0" layoutY="484.0" text="Funciones:" />
-      <Text layoutX="779.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text layoutX="779.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
-      <Text fx:id="txtDirector" layoutX="779.0" layoutY="537.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671326637268" />
-      <Label layoutX="709.0" layoutY="565.0" text="En carltelera desde:" />
-      <Label layoutX="709.0" layoutY="589.0" text="hasta:" />
-      <Text layoutX="779.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="134.99999403953552" />
-      <Text layoutX="830.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="134.99999403953552" />
-      <Button layoutX="166.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonNew" text="Nuevo">
+      <Label layoutX="26.0" layoutY="131.0" prefHeight="16.0" prefWidth="48.0" style="-fx-font-family: Arial;" styleClass="welcomeText" stylesheets="@../Styles/styleDEMO.css" text="Buscar" />
+       <TableView fx:id="moviesView" layoutX="43.0" layoutY="168.0" prefHeight="409.0" prefWidth="600.0">
+           <columns>
+               <TableColumn fx:id="pelicula_ID" minWidth="50.0" prefWidth="50.0" text="N°" />
+               <TableColumn fx:id="pelicula_TITULO" minWidth="200.0" prefWidth="200.0" text="Titulo" />
+               <TableColumn fx:id="pelicula_DIRECTOR" minWidth="200.0" prefWidth="100.0" text="Director" />
+               <TableColumn fx:id="pelicula_GENERO" minWidth="200.0" prefWidth="100.0" text="Género" />
+               <TableColumn fx:id="pelicula_FUNCIONES" minWidth="200.0" prefWidth="100.0" text="Funciones" />
+               <TableColumn fx:id="pelicula_CATEGORIA" minWidth="200.0" prefWidth="100.0" text="Categoría" />
+               <TableColumn fx:id="pelicula_CARTELERA" editable="false" minWidth="200.0" prefWidth="100.0" text="En Cartelera" />
+               <TableColumn fx:id="pelicula_DESDE" minWidth="200.0" prefWidth="100.0" text="Desde" />
+               <TableColumn fx:id="pelicula_HASTA" minWidth="200.0" prefWidth="100.0" text="Hasta" />
+           </columns>
+       </TableView>
+      <Separator layoutX="674.0" layoutY="65.0" orientation="VERTICAL" prefHeight="596.0" prefWidth="2.0" />
+      <ImageView fx:id="movieImageView" fitHeight="179.0" fitWidth="151.0" layoutX="754.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="694.0" layoutY="304.0" style="-fx-font-family: Arial;" text="Titulo: " />
+      <Label layoutX="694.0" layoutY="332.0" style="-fx-font-family: Arial;" text="Duración:" />
+      <Label layoutX="699.0" layoutY="360.0" style="-fx-font-family: Arial;" text="Género:" />
+      <Label layoutX="697.0" layoutY="389.0" prefHeight="17.0" prefWidth="56.0" style="-fx-font-family: Arial;" text="Director:" />
+      <Text fx:id="txtTitulo" layoutX="779.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671875" />
+      <Text fx:id="txtDuracion" layoutX="779.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671875" />
+      <Text fx:id="txtGenero" layoutX="779.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671875" />
+      <Label layoutX="698.0" layoutY="418.0" style="-fx-font-family: Arial;" text="Descripción:" />
+      <Text fx:id="txtDesde" layoutX="830.0" layoutY="630.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="135.00000839470886" />
+      <Label layoutX="702.0" layoutY="545.0" style="-fx-font-family: Arial;" text="Funciones:" />
+      <Text fx:id="txtFuncion1" layoutX="779.0" layoutY="558.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671875" />
+      <Text fx:id="txtFuncion2" layoutX="779.0" layoutY="579.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671875" />
+      <Text fx:id="txtFuncion3" layoutX="779.0" layoutY="606.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="162.13671326637268" />
+      <Label layoutX="702.0" layoutY="617.0" text="En carltelera desde:" />
+      <Label layoutX="704.0" layoutY="644.0" text="hasta:" />
+      <Text fx:id="txtHasta" layoutX="830.0" layoutY="657.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="134.99999403953552" />
+      <Button graphicTextGap="5.0" layoutX="156.0" layoutY="605.0" mnemonicParsing="false" onMouseClicked="#buttonNew" style="-fx-font-family: Arial;" text="Nuevo">
          <graphic>
-            <OctIconView glyphName="DIFF_ADDED" />
-         </graphic>
-      </Button>
-      <Button layoutX="311.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" text="Editar">
+            <FontAwesomeIconView glyphName="PLUS_SQUARE_ALT" />
+         </graphic></Button>
+      <Button graphicTextGap="5.0" layoutX="305.0" layoutY="605.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" style="-fx-font-family: Arial;" text="Editar">
          <graphic>
             <FontAwesomeIconView glyphName="EDIT" />
-         </graphic>
-      </Button>
-      <Button layoutX="467.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" text="Eliminar">
+         </graphic></Button>
+      <Button graphicTextGap="5.0" layoutX="441.0" layoutY="605.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" style="-fx-font-family: Arial;" text="Eliminar">
          <graphic>
             <MaterialDesignIconView glyphName="DELETE" />
-         </graphic>
-      </Button>
-      <Text boundsType="LOGICAL_VERTICAL_CENTER" layoutX="778.0" layoutY="373.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" text="t" wrappingWidth="103.00000637769699" />
+         </graphic></Button>
+      <Text fx:id="txtDirector" boundsType="LOGICAL_VERTICAL_CENTER" layoutX="778.0" layoutY="402.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="T" wrappingWidth="103.00000637769699" />
+      <TextArea fx:id="txtDescripcion" editable="false" layoutX="778.0" layoutY="418.0" prefHeight="115.0" prefWidth="162.0" style="-fx-font-family: Arial;" styleClass="txt-descripcion" />
+      <JFXTextField layoutX="74.0" layoutY="128.0" prefHeight="6.0" prefWidth="308.0" style="-fx-font-family: Arial;" />
+      <FontAwesomeIconView glyphName="SEARCH" layoutX="394.0" layoutY="148.0" size="2em" />
    </children>
 </AnchorPane>
