--- a/src/main/resources/Views/dashboardStage.fxml
+++ b/src/main/resources/Views/dashboardStage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -87,23 +88,125 @@
                   </Label>
                </children>
             </VBox>
+            <VBox fx:id="peliculas61" alignment="CENTER" layoutX="734.0" layoutY="10.0" onMouseClicked="#selectingMovie" prefHeight="251.0" prefWidth="151.0" styleClass="movie-pane">
+               <children>
+                  <Label fx:id="calificacion61" styleClass="calificacion" />
+                  <ImageView fx:id="poster61" fitHeight="249.0" fitWidth="212.0" onMouseClicked="#selectingMovie" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="nombrePelicula61" alignment="CENTER" prefHeight="17.0" prefWidth="175.0" textFill="WHITE">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </children>
       </HBox>
-      <AnchorPane fx:id="selectedMovie" layoutX="91.0" layoutY="117.0" prefHeight="418.0" prefWidth="798.0" styleClass="unselected-movie">
+      <HBox fx:id="selectedMovie" layoutX="43.0" layoutY="120.0" spacing="35.0">
          <children>
-            <ImageView fx:id="movieImage" fitHeight="418.0" fitWidth="236.0" pickOnBounds="true">
-               <viewport>
-                  <Rectangle2D width="586.0" />
-               </viewport>
-            </ImageView>
-            <Label fx:id="datosPelicula" layoutX="236.0" prefHeight="422.0" prefWidth="563.0" styleClass="informacion" />
-            <Label fx:id="genero" layoutX="757.0" layoutY="6.0" />
+            <AnchorPane>
+               <children>
+                  <ImageView fx:id="movieImage" fitHeight="439.0" fitWidth="259.0" pickOnBounds="true">
+                     <viewport>
+                        <Rectangle2D width="586.0" />
+                     </viewport>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <VBox fx:id="contenedorDatosPelicula" spacing="20.0" style="-fx-background-color: #2e3b50;">
+               <children>
+                  <VBox spacing="10.0">
+                     <children>
+                        <HBox spacing="10.0">
+                           <children>
+                              <Label fx:id="titulo" style="-fx-opacity: 200;" textFill="WHITE">
+                                 <font>
+                                    <Font name="Candara" size="36.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="año" style="-fx-opacity: 200;" textFill="WHITE">
+                                 <font>
+                                    <Font name="Candara Light" size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox spacing="5.0">
+                           <children>
+                              <Label fx:id="genero" textFill="#c4c4c4">
+                                 <font>
+                                    <Font name="Corbel Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="separator" text="|" textFill="WHITE">
+                                 <font>
+                                    <Font name="Candara" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="duracion" textFill="#c4c4c4">
+                                 <font>
+                                    <Font name="Corbel" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="separator1" text="|" textFill="WHITE">
+                                 <font>
+                                    <Font name="Candara Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="fechaEstreno" textFill="#c4c4c4">
+                                 <font>
+                                    <Font name="Corbel" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <VBox spacing="90.0">
+                     <children>
+                        <Label fx:id="descripcion" lineSpacing="7.0" style="-fx-opacity: 200;" textFill="WHITE">
+                           <font>
+                              <Font name="Candara" size="18.0" />
+                           </font>
+                        </Label>
+                        <VBox spacing="20.0">
+                           <children>
+                              <Label fx:id="categoria" style="-fx-opacity: 100;" textFill="#bbc1c7">
+                                 <font>
+                                    <Font name="Corbel Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="director" style="-fx-opacity: 100;" textFill="#bbc1c7">
+                                 <font>
+                                    <Font name="Corbel Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="funcion" style="-fx-opacity: 100;" textFill="#bbc1c7">
+                                 <font>
+                                    <Font name="Corbel Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="sala" style="-fx-opacity: 100;" textFill="#bbc1c7">
+                                 <font>
+                                    <Font name="Corbel Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
          </children>
-      </AnchorPane>
-      <Label layoutX="53.0" layoutY="6.0" prefHeight="42.0" prefWidth="401.0" text="NUEVAS PELICULAS !!" textFill="WHITE">
-         <font>
-            <Font name="FontAwesome Regular" size="33.0" />
-         </font>
-      </Label>
+      </HBox>
+      <ImageView fx:id="cartelera" fitHeight="87.0" fitWidth="82.0" layoutX="72.0" layoutY="27.0" onMouseClicked="#comeBackToCartelera" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Images/iconmonstr-home-7-240.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="previousMovie" fitHeight="91.0" fitWidth="89.0" layoutX="41.0" layoutY="584.0" onMouseClicked="#goToPreviousMovie" pickOnBounds="true">
+         <image>
+            <Image url="@../Images/iconmonstr-undo-4-240.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
